Added information about me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["faceshot", "Paulina"]
+  "cSpell.words": [
+    "ENFJ",
+    "faceshot",
+    "Grund",
+    "LGBTQI",
+    "Paulina",
+    "Playwrite",
+    "shecodes"
+  ]
 }
