Added more description

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "ENFJ",
     "faceshot",
     "Grund",
+    "Intrapersonal",
     "LGBTQI",
+    "Multitasker",
     "Paulina",
     "Playwrite",
     "shecodes"
