finished contact page
created contact page and stylize other small elements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     "Intrapersonal",
     "LGBTQI",
     "Multitasker",
+    "paucruz",
     "Paulina",
+    "paulinamarincruz",
     "Playwrite",
     "shecodes"
   ]
